test/razor.test.views/sections/ok/oneViewSection.raz
@section Headers{
    <h1>@Model.h1</h1>
}

@Html.section("Headers")