test/razor.test.views/sections/error/sectionNeverRendered.raz
@section Headers{
    <h1>Never rendered section</h1>
}